Tableau somme par mois en colonnes, correction erreur sur tableau 2D permettant desormais d'avoir un tableau 2D dynamique, ie plus besoin du bouton OK, ajout de la scrollbar sur le tableau 2D

--- a/UploadJSON/styleDSQ.css
+++ b/UploadJSON/styleDSQ.css
@@ -58,11 +58,6 @@
   justify-content: space-around;
 }
 
-tbody {
-    overflow-y: auto;    /* Trigger vertical scroll    */
-    overflow-x: hidden;  /* Hide the horizontal scroll */
-}
-
 table, th , td  {
   border: 1px solid grey;
   border-collapse: collapse;
@@ -73,4 +68,9 @@ table tr:nth-child(odd) {
 }
 table tr:nth-child(even) {
   background-color: #ffffff;
+}
+
+tbody div{
+    overflow:scroll;
+    height:400px;
 }
